--- a/web/static/css/custom.css
+++ b/web/static/css/custom.css
@@ -172,6 +172,7 @@ div#twitter_section div.owl-item{
     height: 250px;
     overflow: auto;
     background-color: #F1F3F9;
+    border: 1px solid rgba(0,0,0,.1);
 }
 
 div#twitter_section div.item-tweet {
@@ -215,7 +216,25 @@ div#twitter_section div.quote-body p.text {
 div#twitter_section div.owl-item hr.linea {
     padding:0;
     margin: 5px 0 5px 0;
-    border:1px solid #b7b7b72b;
+    border: 1px solid rgba(0,0,0,.1);
+}
+
+div#instagram_section div.item-instagram {
+    padding: 5px;
+    position: relative;
+    border: 1px solid rgba(0,0,0,.1);
+}
+
+div#instagram_section img.img-instagram {
+    width: 100%;
+    height: 100%;
+}
+
+@media (min-width: 992px) {
+    div#instagram_section div.item-instagram {
+        width: 250px;
+        height: 250px;
+    }
 }
 
 
