se cambia nombre a título de redes sociales

--- a/web/templates/carrera/index.html
+++ b/web/templates/carrera/index.html
@@ -7,7 +7,7 @@
 <!--What makes us different-->
 <section class="section-98 section-sm-110">
     <div class="shell">
-        <h3>Ultimos Eventos</h3>
+        <h3>Novedades</h3>
         <hr class="divider divider-lg bg-primary">
         <div class="range offset-top-60">
             <div id="loading_section_twitter" class="loading">
