--- a/web/templates/clinica/servicios.html
+++ b/web/templates/clinica/servicios.html
@@ -36,11 +36,11 @@
             <!-- Modern Breadcrumbs-->
             <section class="breadcrumb-modern context-dark text-md-left">
                 <div class="shell section-34 section-md-top-110 section-md-bottom-41">
-                    <h1>Servicios de {{ tipo }}</h1>
+                    <h1>Servicios de {{ tipo_servicio.nombre }}</h1>
                     <ul class="list-inline list-inline-arrows p offset-top-34 offset-md-top-70">
                         <li><a href="/clinica">Clínica</a></li>
                         <li>Servicios</li>
-                        <li>{{ tipo }}</li>
+                        <li>{{ tipo_servicio.nombre }}</li>
                     </ul>
                 </div>
             </section>
@@ -51,9 +51,7 @@
                     <div class="shell">
                         <div class="range range-xs-center">
                             <div class="cell-sm-9 cell-lg-8">
-                                {% if tipo == 'Odontología' %}
-                                <p style="text-align:justify;">Atención de salud bucal de tipo ambulatoria brindada por estudiantes de 4° y 5° año de la Carrera de Odontología, supervisada por docentes Odontólogos según especialidad. </p>
-                                {% endif %}
+                                <p style="text-align:justify;">{% if tipo_servicio.descripcion %}{{ tipo_servicio.descripcion }}{% endif %}</p>
                                 <table data-responsive="true" class="table table-custom table-primary table-fixed">
                                     <tr>
                                         <th class="col-md-1">#</th>
@@ -68,11 +66,7 @@
                                 </table>
                             </div>
                             <div class="cell-lg-4 offset-top-0 veil reveal-lg-block">
-                                {% if tipo == 'Odontología' %}
-                                    <img src="{% static 'images/contenido/clinica/servicios_odontologia.jpg' %}" width="426" height="582" alt="" class="veil reveal-md-inline-block">
-                                {% elif tipo == 'Imagenología' %}
-                                    <img src="{% static 'images/contenido/clinica/servicios_imagenologia.jpg' %}" width="426" height="582" alt="" class="veil reveal-md-inline-block"> 
-                                {% endif %}
+                                    <img src="{{ tipo_servicio.foto.url }}" width="426" height="582" alt="" class="veil reveal-md-inline-block">
                             </div>
                         </div>
                     </div>
