Se agregan enlaces a redes sociales, nuevos telefonos, correos y enlace a vision-mision de la universidad

--- a/web/templates/navegation.html
+++ b/web/templates/navegation.html
@@ -10,8 +10,8 @@
                         <div class="p unit unit-spacing-xs unit-horizontal">
                             <div class="unit-left"><span class="icon icon-xs icon-circle icon-gray-light mdi mdi-phone text-java"></span></div>
                             <div class="unit-body">
-                              <a href="/carrera/contacto/" class="text-gray-darker">+56 51 2334660</a><br/>
-                              <a href="/carrera/contacto/" class="text-gray-darker">clinicaodontologia@userena.cl</a>
+                              <a href="/carrera/contacto/" class="text-gray-darker">(51) 2 334952 - Carrera</a><br/>
+                              <a href="/carrera/contacto/" class="text-gray-darker">(51) 2 334966 - Clínica</a><br/>
                             </div>
                         </div>
                     </address>
@@ -41,10 +41,11 @@
                         <!-- RD Navbar Nav-->
                         <ul class="rd-navbar-nav">
                             <li class="{% active_menu '^[/]$' %}"><a href="/"><span>Inicio</span></a></li>
-                            <li class="{% active_menu '^(/carrera/)(or|ob|pl|pe)([a-z]+)' %}"><a href="/carrera/organigrama"><span>Quienes Somos</span></a>
+                            <li class="{% active_menu '^(/carrera/)(or|ob|pl|pe)([a-z]+)' %}"><a href="#"><span>Quienes Somos</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/carrera/organigrama"><span class="text-middle">Organigrama</span></a>
                                     <li><a href="/carrera/objetivos"><span class="text-middle">Misión - Visión</span></a>
+                                    <li><a href="http://www.userena.cl/userena/universidad/mision-y-vision.html" target="_blank"><span class="text-middle">Misión - Visión Universidad</span></a>
                                     <li><a href="/carrera/docentes"><span class="text-middle">Académicos</span></a></li>
                                     <li><a href="/carrera/plan"><span class="text-middle">Plan Estudios</span></a></li>
                                     <li><a href="/carrera/perfile"><span class="text-middle">Perfil Egresado</span></a></li>
@@ -52,7 +53,7 @@
                                 </ul>
                             </li>
                             <li class="{% active_menu '^(/carrera/)(ad)([a-z]+)' %}"><a href="/carrera/admision"><span>Admisión</span></a></li>
-                            <li class="{% active_menu '/clinica' %}"><a href="/clinica"><span>Clínica</span></a>
+                            <li class="{% active_menu '/clinica' %}"><a href="#"><span>Clínica</span></a>
                                 <ul class="rd-navbar-dropdown">
                                     <li><a href="/clinica/organigrama"><span class="text-middle">Organigrama</span></a></li>
                                     <li><a href="#"><span class="text-middle">Servicios</span></a>
