--- a/web/templates/carrera/contacto.html
+++ b/web/templates/carrera/contacto.html
@@ -81,10 +81,8 @@
                                     <h6>Redes Sociales</h6>
                                     <hr class="text-subline">
                                     <ul class="list-inline">
-                                        <li><a href="#" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light"></a></li>
-                                        <li><a href="#" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light"></a></li>
-                                        <li><a href="#" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light"></a></li>
-                                        <li><a href="#" class="icon fa fa-rss icon-xxs icon-circle icon-gray-light"></a></li>
+                                        <li><a href="https://twitter.com/OdontologiaULS/" target="_blank" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light-2"></a></li>
+                                        <li><a href="https://www.instagram.com/odontologiauls/" target="_blank" class="icon fa fa-instagram icon-xxs icon-circle icon-gray-light-2"></a></li>
                                     </ul>
                                 </div>
                                 <div class="offset-top-60">
@@ -110,8 +108,8 @@
                                                 <div class="icon icon-xxs text-middle mdi mdi-calendar-clock text-primary"></div>
                                             </div>
                                             <div class="unit-body">
-                                                <div>Lu-Vi: 8:00hr–18:00hr</div>
-                                                <div>Sab: 9:00hr–14:00hr</div>
+                                                <div>Lun-Jue: 8:30hr–12:45hr</div>
+                                                <div>Viernes: 8:30hr–12:45hr</div>
                                                 <div>Dom: cerrado</div>
                                             </div>
                                         </div>
@@ -125,10 +123,27 @@
                                             <div class="unit-left">
                                                 <div class="icon icon-xxs text-middle mdi mdi-phone text-primary"></div>
                                             </div>
-                                            <div class="unit-body">
-                                                <a href="callto:#" class="text-dark reveal-block">51 2 334658</a>
-                                            </div>
+                                            <h5>Carrera</h5>
                                         </div>
+                                        <div class="unit-body">
+                                            <a href="callto:+512334952" class="text-dark reveal-block">(51) 2 334952</a>
+                                        </div>
+                                        <br/>
+                                        <div class="unit unit-horizontal unit-spacing-xxs p">
+                                            <div class="unit-left">
+                                                <div class="icon icon-xxs text-middle mdi mdi-phone text-primary"></div>
+                                            </div>
+                                            <h5>Clínica</h5>
+                                        </div>
+                                            <div class="unit-body">
+                                                <a href="callto:+512334966" class="text-dark reveal-block">(51) 2 334966</a>
+                                            </div>
+                                            <div class="unit-body">
+                                                <a href="callto:+512334959" class="text-dark reveal-block">(51) 2 334959</a>
+                                            </div>
+                                            <div class="unit-body">
+                                                <a href="callto:+512334967" class="text-dark reveal-block">(51) 2 334967</a>
+                                            </div>
                                     </div>
                                 </div>
                                 <div class="offset-top-60">
@@ -139,7 +154,13 @@
                                             <div class="unit-left">
                                                 <div class="icon icon-xxs text-middle mdi mdi-email-outline text-primary"></div>
                                             </div>
-                                            <div class="unit-body"><a href="mailto:#" class="text-dark">miaguilera@userena.cl</a></div>
+                                            <div class="unit-body"><a href="mailto:odontologia@userena.cl" class="text-dark">odontologia@userena.cl</a></div>
+                                        </div>
+                                        <div class="unit unit-horizontal unit-spacing-xxs p">
+                                            <div class="unit-left">
+                                                <div class="icon icon-xxs text-middle mdi mdi-email-outline text-primary"></div>
+                                            </div>
+                                            <div class="unit-body"><a href="mailto:clinicaodontologica@userena.cl" class="text-dark">clinicaodontologica@userena.cl</a></div>
                                         </div>
                                     </div>
                                 </div>
