--- a/web/templates/clinica/footer.html
+++ b/web/templates/clinica/footer.html
@@ -10,10 +10,8 @@
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-3 text-md-right">
                         <ul class="list-inline">
-                            <li><a href="#" class="icon fa fa-facebook icon-xxs icon-circle icon-gray-light-2"></a></li>
-                            <li><a href="#" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light-2"></a></li>
-                            <li><a href="#" class="icon fa fa-google-plus icon-xxs icon-circle icon-gray-light-2"></a></li>
-                            <li><a href="#" class="icon fa fa-rss icon-xxs icon-circle icon-gray-light-2"></a></li>
+                            <li><a href="https://twitter.com/OdontologiaULS/" target="_blank" class="icon fa fa-twitter icon-xxs icon-circle icon-gray-light-2"></a></li>
+                            <li><a href="https://www.instagram.com/odontologiauls/" target="_blank" class="icon fa fa-instagram icon-xxs icon-circle icon-gray-light-2"></a></li>
                         </ul>
                     </div>
                     <div class="cell-md-4 offset-top-55 offset-md-top-0 cell-md-push-2">
