Se agrega horario de atencion

--- a/web/templates/carrera/contacto.html
+++ b/web/templates/carrera/contacto.html
@@ -108,9 +108,12 @@
                                                 <div class="icon icon-xxs text-middle mdi mdi-calendar-clock text-primary"></div>
                                             </div>
                                             <div class="unit-body">
-                                                <div>Lun-Jue: 8:30hr–12:45hr</div>
-                                                <div>Viernes: 8:30hr–12:45hr</div>
-                                                <div>Dom: cerrado</div>
+                                                <div><strong>Lunes-Jueves:</strong></div>
+                                                <div>8:30 a 12:45 hrs</div>
+                                                <div>14:45 a 18:15 hrs</div>
+                                                <div><strong>Viernes:</strong></div>
+                                                <div>8:30 a 12:45 hrs</div>
+                                                <div>14:45 a 17:15 hrs</div>
                                             </div>
                                         </div>
                                     </div>
