--- a/web/templates/carrera/lista_docentes.html
+++ b/web/templates/carrera/lista_docentes.html
@@ -1,11 +1,8 @@
-{% extends "carrera/basecontenido.html" %}
-{% load staticfiles %}
-
-{% block title %}Admisión{% endblock %}
+{% extends "carrera/basecontenido.html" %} 
+{% load staticfiles %} 
+{% block title %}Admisión{% endblock %} 
 
 {% block content %}
-<!-- What makes us different-->
-<!--What makes us different-->
 <!-- Modern Breadcrumbs-->
 <section class="breadcrumb-modern context-dark text-md-left">
     <div class="shell section-34 section-md-top-110 section-md-bottom-41">
@@ -18,102 +15,100 @@
 </section>
 <!-- Page Content-->
 <main class="page-content">
-
-  <!-- Our team-->
-  <section class="section-98 section-sm-50">
-      <div class="shell">
-          <div class="isotope-wrap">
-              <div class="row">
-                  <!-- Isotope Filters-->
-                  <div class="col-lg-3">
-                      <div class="isotope-filters isotope-filters-vertical">
-                          <h4 class="text-uppercase isotope-filters-title offset-top-34"> </h4>
-                          <ul class="list-inline list-inline-sm">
-                              <li class="veil-md"><p>Equipos</p></li>
-                              <li class="section-relative">
-                                  <button data-custom-toggle="isotope-1" data-custom-toggle-disable-on-blur="true" class="isotope-filters-toggle btn btn-sm btn-default">Filtro<span class="caret"></span>
-                                  </button>
-                                  <ul id="isotope-1" class="list-sm-inline isotope-filters-list">
-                                      <li><a data-isotope-filter="docentes" data-isotope-group="gallery" href="#" class="active">Docentes</a></li>
-                                      <li><a data-isotope-filter="endodoncia" data-isotope-group="gallery" href="#">Endodoncia </a></li>
-                                      <li><a data-isotope-filter="odontopediatria" data-isotope-group="gallery" href="#">Odontopediatría</a></li>
-                                  </ul>
-                              </li>
-                          </ul>
-                      </div>
-                  </div>
-                  <!-- Isotope Content-->
-                  <div class="col-lg-9 offset-lg-top-0 offset-top-34">
-                      <div data-isotope-layout="fitRows" data-isotope-group="gallery" class="isotope">
-                          <div data-photo-swipe-gallery="gallery" class="row text-sm-left">
-
-                              <div data-filter="docentes" class="col-md-12 isotope-item">
-                                  <h3>Docentes</h3>
-                                  <hr class="divider divider-lg hr-sm-left-2 bg-primary">
-                                  <div class="offset-top-41 offset-lg-top-60">
-                                      <div class="range range-xs-left">
-                                          {% for docente in docentes %}
-                                          <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
-                                              <figure class="thumbnail-josip thumbnail-spacing">
-                                                  <img width="270" height="270" src="{{ docente.foto.url }}" alt=""/>
-                                                  <div class="thumbnail-desc" style="padding: 10px; text-align:center">
-                                                      <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ docente.nombres }}</h6>
-                                                      <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ docente.apellido_paterno }}</h6>
-                                                      <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ docente.cargo }}</h6>
-                                                  </div>
-                                              </figure>
-                                          </div>
-                                          {% endfor %}
-                                      </div>
-                                  </div>
-                              </div>
-
-                              <div data-filter="endodoncia" class="col-md-12 isotope-item">
-                                  <h3>Endodoncia</h3>
-                                  <hr class="divider divider-lg hr-sm-left-2 bg-primary">
-                                  <div class="offset-top-41 offset-lg-top-60">
-                                      <div class="range range-xs-left">
-                                          {% for endodoncia in endodoncias %}
-                                          <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
-                                              <figure class="thumbnail-josip thumbnail-spacing">
-                                                  <img width="270" height="270" src="{{ endodoncia.foto.url }}" alt=""/>
-                                                  <div class="thumbnail-desc" style="padding: 10px; text-align:center">
-                                                      <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ endodoncia.nombres }}</h6>
-                                                      <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ endodoncia.apellido_paterno }}</h6>
-                                                      <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ endodoncia.cargo }}</h6>
-                                                  </div>
-                                              </figure>
-                                          </div>
-                                          {% endfor %}
-                                      </div>
-                                  </div>
-                              </div>
-
-                              <div data-filter="odontopediatria" class="col-md-12 isotope-item">
-                                  <h3>Odontopediatría</h3>
-                                  <hr class="divider divider-lg hr-sm-left-2 bg-primary">
-                                  <div class="offset-top-41 offset-lg-top-60">
-                                      <div class="range range-xs-left">
-                                          {% for odontopediatria in odontopediatrias %}
-                                          <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
-                                              <figure class="thumbnail-josip thumbnail-spacing">
-                                                  <img width="270" height="270" src="{{ odontopediatria.foto.url }}" alt=""/>
-                                                  <div class="thumbnail-desc" style="padding: 10px; text-align:center">
-                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ odontopediatria.nombres }}</h6>
-                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ odontopediatria.apellido_paterno }}</h6>
-                                                    <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ odontopediatria.cargo }}</h6>
-                                                  </div>
-                                              </figure>
-                                          </div>
-                                          {% endfor %}
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
+    <!-- Our team-->
+    <section class="section-98 section-sm-50">
+        <div class="shell">
+            <div class="isotope-wrap">
+                <div class="row">
+                    <!-- Isotope Filters-->
+                    <div class="col-lg-3">
+                        <div class="isotope-filters isotope-filters-vertical">
+                            <h4 class="text-uppercase isotope-filters-title offset-top-34"> </h4>
+                            <ul class="list-inline list-inline-sm">
+                                <li class="veil-md">
+                                    <p>Equipos</p>
+                                </li>
+                                <li class="section-relative">
+                                    <button data-custom-toggle="isotope-1" data-custom-toggle-disable-on-blur="true" class="isotope-filters-toggle btn btn-sm btn-default">Filtro<span class="caret"></span>
+                                    </button>
+                                    <ul id="isotope-1" class="list-sm-inline isotope-filters-list">
+                                        <li><a data-isotope-filter="docentes" data-isotope-group="gallery" href="#" class="active">Docentes</a></li>
+                                        <li><a data-isotope-filter="endodoncia" data-isotope-group="gallery" href="#">Endodoncia </a></li>
+                                        <li><a data-isotope-filter="odontopediatria" data-isotope-group="gallery" href="#">Odontopediatría</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- Isotope Content-->
+                    <div class="col-lg-9 offset-lg-top-0 offset-top-34">
+                        <div data-isotope-layout="fitRows" data-isotope-group="gallery" class="isotope">
+                            <div data-photo-swipe-gallery="gallery" class="row text-sm-left">
+                                <div data-filter="docentes" class="col-md-12 isotope-item">
+                                    <h3>Docentes</h3>
+                                    <hr class="divider divider-lg hr-sm-left-2 bg-primary">
+                                    <div class="offset-top-41 offset-lg-top-60">
+                                        <div class="range range-xs-left">
+                                            {% for docente in docentes %}
+                                            <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
+                                                <figure class="thumbnail-josip thumbnail-spacing">
+                                                    <img width="270" height="270" src="{{ docente.foto.url }}" alt="" />
+                                                    <div class="thumbnail-desc" style="padding: 10px; text-align:center">
+                                                        <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ docente.nombres }}</h6>
+                                                        <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ docente.apellido_paterno }}</h6>
+                                                        <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ docente.cargo }}</h6>
+                                                    </div>
+                                                </figure>
+                                            </div>
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div data-filter="endodoncia" class="col-md-12 isotope-item">
+                                    <h3>Endodoncia</h3>
+                                    <hr class="divider divider-lg hr-sm-left-2 bg-primary">
+                                    <div class="offset-top-41 offset-lg-top-60">
+                                        <div class="range range-xs-left">
+                                            {% for endodoncia in endodoncias %}
+                                            <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
+                                                <figure class="thumbnail-josip thumbnail-spacing">
+                                                    <img width="270" height="270" src="{{ endodoncia.foto.url }}" alt="" />
+                                                    <div class="thumbnail-desc" style="padding: 10px; text-align:center">
+                                                        <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ endodoncia.nombres }}</h6>
+                                                        <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ endodoncia.apellido_paterno }}</h6>
+                                                        <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ endodoncia.cargo }}</h6>
+                                                    </div>
+                                                </figure>
+                                            </div>
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div data-filter="odontopediatria" class="col-md-12 isotope-item">
+                                    <h3>Odontopediatría</h3>
+                                    <hr class="divider divider-lg hr-sm-left-2 bg-primary">
+                                    <div class="offset-top-41 offset-lg-top-60">
+                                        <div class="range range-xs-left">
+                                            {% for odontopediatria in odontopediatrias %}
+                                            <div class="cell-xs-8 cell-sm-7 cell-md-4 offset-top-41 offset-md-top-0">
+                                                <figure class="thumbnail-josip thumbnail-spacing">
+                                                    <img width="270" height="270" src="{{ odontopediatria.foto.url }}" alt="" />
+                                                    <div class="thumbnail-desc" style="padding: 10px; text-align:center">
+                                                        <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ odontopediatria.nombres }}</h6>
+                                                        <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ odontopediatria.apellido_paterno }}</h6>
+                                                        <h6 class="thumbnail-josip-title text-bold text-white" style="margin: 0px;">{{ odontopediatria.cargo }}</h6>
+                                                    </div>
+                                                </figure>
+                                            </div>
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </main>
